# tun-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
examples/: async_ping.rs  async_ping_framed.rs  async_tap.rs  dev-config.rs  ping-tap-async-std.rs  ping-tap-tokio.rs  ping-tap.rs  ping-tun-async-std.rs  ping-tun-offload-tokio.rs  ping-tun-tokio.rs  ping-tun.rs  ping_offload.rs  read-async-std.rs  read-async-tokio.rs  read-async.rs  read-offload.rs  read.rs  write.rs
src/: address.rs  builder.rs  configuration.rs  device.rs  error.rs  lib.rs
src/async/: codec.rs  mod.rs  unix_device.rs  win_device.rs
src/async/async_device/: async_std.rs  mod.rs  tokio.rs
src/async_device/: mod.rs
src/async_device/unix/: tokio.rs
src/async_device/windows/: mod.rs
src/async_framed/: mod.rs
src/getifaddrs/: mod.rs
src/platform/: mod.rs
src/platform/android/: device.rs  mod.rs
src/platform/freebsd/: device.rs  mod.rs  sys.rs
src/platform/ios/: device.rs  mod.rs
src/platform/linux/: checksum.rs  device.rs  mod.rs  offload.rs  sys.rs
src/platform/macos/: device.rs  mod.rs  sys.rs
src/platform/posix/: device.rs  fd.rs  mod.rs  sockaddr.rs  split.rs  tun.rs
src/platform/unix/: async_device.rs  device.rs  fd.rs  mod.rs  sockaddr.rs  tun.rs
src/platform/unix/async_device/: async_std.rs  tokio.rs
src/platform/windows/: async_device.rs  device.rs  ffi.rs  mod.rs  netsh.rs  verify_dll_file.rs
src/platform/windows/tap/: iface.rs  mod.rs
src/platform/windows/tap_packet/: mod.rs
src/platform/windows/tap_packet/arp/: mod.rs  packet.rs
src/platform/windows/tap_packet/ethernet/: mod.rs  packet.rs  protocol.rs
src/platform/windows/tun/: mod.rs  wintun_log.rs  wintun_raw.rs
tests/: test_dev.rs
