[package]
name = "tun-rs"
version = "1.0.2"
edition = "2021"
authors = ["xmh0511, vnt-dev, ssrlive"]
license = "Apache-2.0"
description = "A cross-platform infrastructure of Tun/Tap device creation and handling."
repository = "https://github.com/xmh0511/tun-rs"
keywords = ["tun", "tap", "network", "tunnel", "cross-platform"]

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
bytes = { version = "1" }
cfg-if = "1"
futures-core = { version = "0.3", optional = true }
libc = { version = "0.2", features = ["extra_traits"] }
log = "0.4"
thiserror = "1"
tokio = { version = "1", features = [
    "net",
    "macros",
    "io-util",
], optional = true }
tokio-util = { version = "0.7", features = ["codec"], optional = true }
rustversion = "1.0.17"

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "android", target_os="freebsd"))'.dependencies]
nix = { version = "0.29", features = ["ioctl"] }

[target.'cfg(target_os = "windows")'.dependencies]
scopeguard = "1.2.0"
winreg = "0.52.0"
c2rust-bitfields = "0.18"
windows-sys = { version = "0.59", features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_Ndis",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_WinTrust",
    "Win32_Security_Cryptography",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
] }
wintun = { version = "0.6", features = ["panic_on_unsent_packets"], package = "wintun-bindings" }
libloading = "0.8"

[target.'cfg(any(target_os = "macos", target_os = "freebsd"))'.dependencies]
ipnet = "2"

[target.'cfg(any(target_os = "linux", target_os = "freebsd",target_os = "windows"))'.dependencies]
mac_address = "1.1.7"

[dev-dependencies]
ctrlc2 = { version = "3", features = ["tokio", "termination"] }
env_logger = "0.11"
futures = "0.3"
packet = "0.1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }

[features]
default = ["wintun-dns"]
async = ["tokio", "futures-core", "tokio-util"]
wintun-dns = []
experimental = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "read-async"
required-features = ["async"]


[[example]]
name = "ping-tun"
required-features = ["async"]

[[example]]
name = "ping-tap"
required-features = ["async"]